v1 - split into files - added nodename diagnostics that just check if a node exists
v1
- split into files
- added nodename diagnostics that just check if a node exists

 Conflicts:
	bento_diagnostics/log_diagnostics.py
	resource/diagnostics_config.yaml

--- a/resource/diagnostics_config.yaml
+++ b/resource/diagnostics_config.yaml
@@ -1,8 +1,8 @@
 # OK=0, WARN=1, ERROR=2. STALE=3
 
 # Diagnostics to evaluate
-diagnostics:
-  - name: "bento_drive"
+log_diagnostics:
+  - node_name: "bento_box.bento_drive_node"
     # Higher priority overwrites lower priority in a latching manner.
     log_messages:
       - name: "can_transmission"
@@ -11,8 +11,8 @@ diagnostics:
         level: ERROR
         priority: 2
       - name: "motorcontroller_error"
-        keyword: "ERROR initializing motor controller with ID"
-        message: "Motorcontroller is fucked."
+        keyword: "Error synchronizing with device" #alt? ERROR initializing motor controller with ID
+        message: "A Motorcontroller is cooked or missing."
         level: ERROR
         priority: 1
       - name: "disabled_robot"
@@ -25,4 +25,12 @@ diagnostics:
         message: "Operating normally."
         level: OK
         priority: 0
+
+nodename_diagnostics:
+  - node_name: "bento_box/cam1.camera_node_1"
+    message: "Camera 1 crashed, make sure it is plugged in and for wobbly contacts! Check with 'cam -l' and 'lsusb'"
+    level: ERROR
+  - node_name: "bento_box/cam2.camera_node_2"
+    message: "Camera 2 crashed, make sure it is plugged in and for wobbly contacts! Check with 'cam -l' and 'lsusb'"
+    level: ERROR
 
